August - 0.9.8.1
- UI: Satellite list, propagation modes and others are now shown sorted. (TNX Isabel)
- UI: Added default values to the infoWidget (Continent, Prefix, CQ, ITU...). (TNX Isabel)
- UI: RX/TX Freq in Satellite tab are also in red/black depending on the frequency being out/in of ham bands.
- Bugfix: Editing a QSO to remove a comment was not properly working. (TNX Isabel)
- Bugfix: Worked & Confirmed QSO numbers are now aligned in the Awards tab. (TNX Isabel)
- Bugfix: KLog.pro is now fixed to compile in Linux. (TNX KB2YSI)
- Bugfix: Improved how the DXMarathon was managed when disabled.
- Bugfix: Improved how DXCC Award was updated after one QSO was added. (TNX Isabel)


August - 0.9.8
- New feature: Basic Hamlib support.
- Fixed a bug in the SQL update database.
- Fixed a bug in the DXCCWidget.
- Fixed a bug in the QSO per hour stats.
- Added the FT4 mode.
- Updated translations: Catalan (TNX Txema), Danish (TNX Joe), Finnish (TNX Kristjan), French (F4HWL), German (TNX Burkhard), Spanish (EA4TV).

March - 0.9.7.3
- TODO: Remove the band 0 / Light from the DB.
- UI: KLog warns the user if the frequency used is out of the hamradio bands.
- Reworked how freqs and bands are managed.

March 2019 - 0.9.7.2
- Bugfix: Frequency boxes did not accepted frequencies higher than 99.999 MHz. (TNX KB2YSI)

March 2019 - 0.9.7.1
- Bugfix: The frequency was not properly saved in the DB. (TNX KB2YSI)
- Bugfix: The QSO_DATE was not exported into ADIF. (TNX KB2YSI)

March 2019 - 0.9.7
- Bugfix: When clicking on Check updates, the dialog froze.
- Bugfix: Printing log is not longer showing band in the mode column.
- Updated the default date on date boxes to the current date.
- Improved the Frequency syncronization between Satellite tab and the main tab.
- Improved how default mode is calculated.
- Added Satellites widget in Setup.
- Updated translations: Catalan (TNX Txema), Danish (TNX Joe), Finnish (TNX Kristjan), French (F4HWL), German (TNX Burkhard), Spanish (EA4TV).
