@@ -14,6 +14,9 @@ Please join the mailing list at:
 You can also join the Telegram chat group:
     - https://t.me/klogchat
 
+The Telegram chat group in Spanish:
+    - https://t.me/KLogES
+
 If you are a native in a language different than English or Spanish, please consider helping us translating KLog into your native language.
 Please contact me at jaimeNOMORESPAMrobles.es (change "NOMORESPAM" by @).
 
