@@ -1,4 +1,5 @@
 August - 0.9.8.1
+- Added the Es'hail / QO-100 satellite.
 - UI: Satellite list, propagation modes and others are now shown sorted. (TNX Isabel)
 - UI: Added default values to the infoWidget (Continent, Prefix, CQ, ITU...). (TNX Isabel)
 - UI: RX/TX Freq in Satellite tab are also in red/black depending on the frequency being out/in of ham bands.
